Implementación de seguridad de contraseñas cifradas + Validación de entidades

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -39,7 +39,7 @@ msg.user-list.title=User List
 msg.user-list.add=Add New User
 msg.user-list.id=ID
 msg.user-list.username=Username
-msg.user-list.passwordHash=Password
+msg.user-list.passwordHash=Hashed password
 msg.user-list.active=Active
 msg.user-list.accountNonLocked=Account Non-Locked
 msg.user-list.lastPasswordChange=Last Password Change
@@ -80,3 +80,14 @@ msg.user-controller.delete.success=User successfully deleted.
 msg.user-controller.insert.success=User successfully inserted.
 msg.user-controller.update.success=User successfully updated.
 
+# User.java
+msg.user.username.notEmpty=The username cannot be empty.
+msg.user.username.size=The username must be between 3 and 50 characters.
+msg.user.passwordHash.notEmpty=The password cannot be empty.
+msg.user.active.notNull=The 'active' field cannot be null.
+msg.user.accountNonLocked.notNull=The 'accountNonLocked' field cannot be null.
+msg.user.lastPasswordChange.pastOrPresent=The last password change date cannot be in the future.
+msg.user.passwordExpiresAt.futureOrPresent=The password expiration date must be current or future.
+msg.user.failedLoginAttempts.min=The number of failed login attempts cannot be negative.
+msg.user.emailVerified.notNull=The 'emailVerified' field cannot be null.
+msg.user.mustChangePassword.notNull=The 'mustChangePassword' field cannot be null.
