--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -38,7 +38,7 @@ msg.user-list.title=Listado de Usuarios
 msg.user-list.add=Agregar Nuevo Usuario
 msg.user-list.id=ID
 msg.user-list.username=Nombre de Usuario
-msg.user-list.passwordHash=Contraseña
+msg.user-list.passwordHash=Contraseña hashed
 msg.user-list.active=Activo
 msg.user-list.accountNonLocked=Cuenta No Bloqueada
 msg.user-list.lastPasswordChange=Último Cambio de Contraseña
@@ -79,3 +79,15 @@ msg.user-controller.delete.error=Error al eliminar el usuario.
 msg.user-controller.delete.success=Usuario eliminado correctamente.
 msg.user-controller.insert.success=Usuario insertado correctamente.
 msg.user-controller.update.success=Usuario actualizado correctamente.
+
+# User.java
+msg.user.username.notEmpty=El nombre de usuario no puede estar vacío.
+msg.user.username.size=El nombre de usuario debe tener entre 3 y 50 caracteres.
+msg.user.passwordHash.notEmpty=La contraseña no puede estar vacía.
+msg.user.active.notNull=Debe especificarse si el usuario está activo.
+msg.user.accountNonLocked.notNull=Debe especificarse si la cuenta está bloqueada.
+msg.user.lastPasswordChange.pastOrPresent=La fecha del último cambio de contraseña no puede ser futura.
+msg.user.passwordExpiresAt.futureOrPresent=La fecha de expiración de la contraseña debe ser actual o futura.
+msg.user.failedLoginAttempts.min=El número de intentos fallidos no puede ser negativo.
+msg.user.emailVerified.notNull=Debe especificarse si el correo electrónico está verificado.
+msg.user.mustChangePassword.notNull=Debe especificarse si el usuario debe cambiar la contraseña.
