CRUD de Provincias

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -29,8 +29,10 @@ msg.region.name.size=El nombre no puede tener más de 100 caracteres
 
 # RegionController.java:
 msg.region-controller.insert.codeExist=El código de la Comunidad Autonoma ya existe.
+msg.region-controller.insert.nameExist=El nombre de la Comunidad Autonoma ya existe.
 msg.region-controller.insert.error=Error al insertar la Comunidad Autónoma.
 msg.region-controller.update.codeExist=El código de la Comunidad Autonoma ya existe.
+msg.region-controller.update.nameExist=El nombre de la Comunidad Autonoma ya existe.
 msg.region-controller.update.error=Error al insertar la Comunidad Autónoma.
 
 # user-list.html
@@ -91,3 +93,51 @@ msg.user.passwordExpiresAt.futureOrPresent=La fecha de expiración de la contras
 msg.user.failedLoginAttempts.min=El número de intentos fallidos no puede ser negativo.
 msg.user.emailVerified.notNull=Debe especificarse si el correo electrónico está verificado.
 msg.user.mustChangePassword.notNull=Debe especificarse si el usuario debe cambiar la contraseña.
+
+# Province - Entity
+msg.province.code.notEmpty=El código de la provincia es obligatorio.
+msg.province.code.size=El código de la provincia no puede tener más de 10 caracteres.
+msg.province.name.notEmpty=El nombre de la provincia es obligatorio.
+msg.province.name.size=El nombre de la provincia no puede tener más de 100 caracteres.
+msg.province.region.notNull=Debes seleccionar una Comunidad Autónoma para la provincia.
+
+# ProvinceController
+msg.province-controller.list.error=Error al listar las provincias.
+msg.province-controller.edit.notFound=No se ha encontrado la provincia especificada.
+msg.province-controller.edit.error=Error al cargar los datos de la provincia.
+msg.province-controller.insert.nameExist=El nombre de la provincia ya existe. Por favor, elige otro.
+msg.province-controller.insert.codeExist=El código de la provincia ya existe. Por favor, elige otro.
+msg.province-controller.insert.error=Se ha producido un error al crear la provincia.
+msg.province-controller.update.codeExist=El código de la provincia ya existe en otra provincia.
+msg.province-controller.update.nameExist=El nombre de la provincia ya existe. Por favor, elige otro.
+msg.province-controller.update.error=Se ha producido un error al actualizar la provincia.
+msg.province-controller.delete.error=Se ha producido un error al eliminar la provincia.
+
+# Province list
+msg.province-list.title=Listado de Provincias
+msg.province-list.add=Agregar Nueva Provincia
+msg.province-list.id=ID
+msg.province-list.code=Código
+msg.province-list.name=Nombre
+msg.province-list.region=Comunidad Autónoma
+msg.province-list.actions=Acciones
+msg.province-list.edit=Editar
+msg.province-list.delete=Eliminar
+msg.province-list.confirm=¿Estás seguro?
+
+
+# Province Form
+msg.province-form.add=Agregar nueva provincia
+msg.province-form.edit=Editar provincia
+msg.province-form.code=Código
+msg.province-form.name=Nombre
+msg.province-form.region=Comunidad Autónoma
+msg.province-form.region.select=-- Selecciona una comunidad autónoma --
+msg.province-form.create=Crear
+msg.province-form.update=Actualizar
+msg.province-form.returnback=Volver al listado
+
+nav.home=Inicio
+nav.regions=Comunidades Autónomas
+nav.provinces=Provincias
+nav.users=Usuarios
