--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -30,8 +30,10 @@ msg.region.name.size=The name must not exceed 100 characters
 
 # RegionController.java:
 msg.region-controller.insert.codeExist=The Region code already exists.
+msg.region-controller.insert.nameExist=The Region name already exists.
 msg.region-controller.insert.error=Error inserting the Region.
 msg.region-controller.update.codeExist=The Region code already exists.
+msg.region-controller.update.nameExist=The Region name already exists.
 msg.region-controller.update.error=Error updating the Region.
 
 # user-list.html
@@ -91,3 +93,51 @@ msg.user.passwordExpiresAt.futureOrPresent=The password expiration date must be 
 msg.user.failedLoginAttempts.min=The number of failed login attempts cannot be negative.
 msg.user.emailVerified.notNull=The 'emailVerified' field cannot be null.
 msg.user.mustChangePassword.notNull=The 'mustChangePassword' field cannot be null.
+
+# Province - Entity
+msg.province.code.notEmpty=Province code is required.
+msg.province.code.size=Province code cannot be longer than 10 characters.
+msg.province.name.notEmpty=Province name is required.
+msg.province.name.size=Province name cannot be longer than 100 characters.
+msg.province.region.notNull=You must select a region for the province.
+
+# ProvinceController
+msg.province-controller.list.error=An error occurred while listing provinces.
+msg.province-controller.edit.notFound=The specified province was not found.
+msg.province-controller.edit.error=An error occurred while loading the province data.
+msg.province-controller.insert.codeExist=Province code already exists. Please choose another one.
+msg.province-controller.insert.nameExist=Province name already exists. Please choose another one.
+msg.province-controller.insert.error=An error occurred while creating the province.
+msg.province-controller.update.codeExist=Province code already exists for another province.
+msg.province-controller.update.nameExist=Province name already exists for another province.
+msg.province-controller.update.error=An error occurred while updating the province.
+msg.province-controller.delete.error=An error occurred while deleting the province.
+
+# Province list
+msg.province-list.title=Province List
+msg.province-list.add=Add New Province
+msg.province-list.id=ID
+msg.province-list.code=Code
+msg.province-list.name=Name
+msg.province-list.region=Region
+msg.province-list.actions=Actions
+msg.province-list.edit=Edit
+msg.province-list.delete=Delete
+msg.province-list.confirm=Are you sure?
+
+
+# Province Form
+msg.province-form.add=Add new province
+msg.province-form.edit=Edit province
+msg.province-form.code=Code
+msg.province-form.name=Name
+msg.province-form.region=Region
+msg.province-form.region.select=-- Select a region --
+msg.province-form.create=Create
+msg.province-form.update=Update
+msg.province-form.returnback=Back to list
+
+nav.home=Home
+nav.regions=Regions
+nav.provinces=Provinces
+nav.users=Users
