CRUDs con JPA e Hibernate, DTOs, Mappers, Paginación y Ordenación

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -11,6 +11,9 @@ msg.region-list.actions=Acciones
 msg.region-list.edit=Editar
 msg.region-list.delete=Eliminar
 msg.region-list.confirm=¿Estás seguro?
+msg.region-list.returnback=Volver al inicio
+msg.region-list.viewDetail=Ver detalle
+
 
 # user-form.html
 msg.region-form.add=Nueva Comunidad Autónoma
@@ -20,6 +23,21 @@ msg.region-form.name=Nombre
 msg.region-form.create=Crear
 msg.region-form.update=Actualizar
 msg.region-form.returnback=Volver a la lista
+
+# region-detail.html
+msg.region-detail.title=Detalle de la Comunidad Autónoma
+msg.region-detail.section.regionData=Datos de la Comunidad Autónoma
+msg.region-detail.field.id=ID
+msg.region-detail.field.code=Código
+msg.region-detail.field.name=Nombre
+msg.region-detail.section.provinces=Provincias
+msg.region-detail.provinces.col.id=ID
+msg.region-detail.provinces.col.code=Código
+msg.region-detail.provinces.col.name=Nombre
+msg.region-detail.provinces.col.actions=Acciones
+msg.region-detail.provinces.empty=Esta Comunidad Autónoma no tiene provincias registradas.
+msg.region-detail.action.back=Volver al listado
+msg.region-detail.viewDetail=Ver Detalle
 
 # Region.java
 msg.region.code.notEmpty=El código no puede estar vacío
@@ -34,6 +52,8 @@ msg.region-controller.insert.error=Error al insertar la Comunidad Autónoma.
 msg.region-controller.update.codeExist=El código de la Comunidad Autonoma ya existe.
 msg.region-controller.update.nameExist=El nombre de la Comunidad Autonoma ya existe.
 msg.region-controller.update.error=Error al insertar la Comunidad Autónoma.
+msg.region-controller.detail.notFound=No se ha encontrado la Comunidad Autónoma solicitada.
+msg.region-controller.detail.error=Se ha producido un error al cargar el detalle de la Comunidad Autónoma.
 
 # user-list.html
 msg.user-list.title=Listado de Usuarios
@@ -70,7 +90,6 @@ msg.user-form.passwordExpiresAt=Contraseña Expira En
 msg.user-form.failedLoginAttempts=Intentos de Inicio de Sesión Fallidos
 msg.user-form.emailVerified=Correo Verificado
 msg.user-form.mustChangePassword=Debe Cambiar Contraseña
-msg.region-list.returnback=Volver al inicio
 
 # UserController.java
 msg.user-controller.insert.error=Error al insertar el usuario.
@@ -112,6 +131,8 @@ msg.province-controller.update.codeExist=El código de la provincia ya existe en
 msg.province-controller.update.nameExist=El nombre de la provincia ya existe. Por favor, elige otro.
 msg.province-controller.update.error=Se ha producido un error al actualizar la provincia.
 msg.province-controller.delete.error=Se ha producido un error al eliminar la provincia.
+msg.province-controller.detail.notFound=No se ha encontrado la provincia solicitada.
+msg.province-controller.detail.error=Se ha producido un error al cargar el detalle de la provincia.
 
 # Province list
 msg.province-list.title=Listado de Provincias
@@ -124,6 +145,8 @@ msg.province-list.actions=Acciones
 msg.province-list.edit=Editar
 msg.province-list.delete=Eliminar
 msg.province-list.confirm=¿Estás seguro?
+msg.province-list.returnback=Volver al inicio
+msg.province-list.viewDetail=Ver Detalle
 
 
 # Province Form
@@ -137,7 +160,29 @@ msg.province-form.create=Crear
 msg.province-form.update=Actualizar
 msg.province-form.returnback=Volver al listado
 
+# province-detail.html
+msg.province-detail.title=Detalle de la provincia
+msg.province-detail.section.provinceData=Datos de la provincia
+msg.province-detail.field.id=ID
+msg.province-detail.field.code=Código
+msg.province-detail.field.name=Nombre
+# Región asociada a la provincia
+msg.province-detail.section.region=Región
+msg.province-detail.region.field.id=ID
+msg.province-detail.region.field.code=Código
+msg.province-detail.region.field.name=Nombre
+msg.province-detail.region.empty=Esta provincia no tiene región asociada.
+# Acciones relativas a la región (desde province-detail)
+msg.province-detail.region.viewDetail=Ver detalle de la región
+msg.province-detail.action.back=Volver al listado
+
 nav.home=Inicio
 nav.regions=Comunidades Autónomas
 nav.provinces=Provincias
 nav.users=Usuarios
+
+# Mensajes de paginación genéricos para toda la app
+msg.pagination.info=Página {0} de {1} ({2} registros en total)
+msg.pagination.aria.label=Paginación de elementos
+msg.pagination.prev=Página anterior
+msg.pagination.next=Página siguiente
