Correción de validaciones de campos en formulario + Encriptación de password eliminado

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -100,23 +100,26 @@ msg.user-controller.insert.success=User successfully inserted.
 msg.user-controller.update.success=User successfully updated.
 
 # User.java
+msg.user.id.notNull=User ID cannot be null.
 msg.user.username.notEmpty=The username cannot be empty.
 msg.user.username.size=The username must be between 3 and 50 characters.
 msg.user.passwordHash.notEmpty=The password cannot be empty.
+msg.user.passwordHash.size=Password must be at least 6 characters long.
 msg.user.active.notNull=The 'active' field cannot be null.
 msg.user.accountNonLocked.notNull=The 'accountNonLocked' field cannot be null.
+msg.user.emailVerified.notNull=The 'emailVerified' field cannot be null.
+msg.user.mustChangePassword.notNull=The 'mustChangePassword' field cannot be null.
 msg.user.lastPasswordChange.pastOrPresent=The last password change date cannot be in the future.
 msg.user.passwordExpiresAt.futureOrPresent=The password expiration date must be current or future.
 msg.user.failedLoginAttempts.min=The number of failed login attempts cannot be negative.
-msg.user.emailVerified.notNull=The 'emailVerified' field cannot be null.
-msg.user.mustChangePassword.notNull=The 'mustChangePassword' field cannot be null.
+
 
 # Province - Entity
 msg.province.code.notEmpty=Province code is required.
 msg.province.code.size=Province code cannot be longer than 10 characters.
 msg.province.name.notEmpty=Province name is required.
 msg.province.name.size=Province name cannot be longer than 100 characters.
-msg.province.region.notNull=You must select a region for the province.
+msg.province.regionId.notNull=You must select a region for the province.
 
 # ProvinceController
 msg.province-controller.list.error=An error occurred while listing provinces.
@@ -182,3 +185,37 @@ msg.pagination.info=Page {0} of {1} ({2} records in total)
 msg.pagination.aria.label=Items pagination
 msg.pagination.prev=Previous page
 msg.pagination.next=Next page
+
+msg.user-list.returnback=Back to Home
+
+# === User Detail ===
+msg.user-list.viewDetail=View Detail
+msg.user-detail.title=User Detail
+msg.user-detail.id=ID
+msg.user-detail.username=Username
+msg.user-detail.active=Active
+msg.user-detail.accountNonLocked=Account Not Locked
+msg.user-detail.emailVerified=Email Verified
+msg.user-detail.mustChangePassword=Must Change Password
+msg.user-detail.lastPasswordChange=Last Password Change
+msg.user-detail.passwordExpiresAt=Password Expires At
+msg.user-detail.failedLoginAttempts=Failed Login Attempts
+msg.user-detail.edit=Edit
+msg.user-detail.delete=Delete
+msg.user-detail.confirmDelete=Are you sure you want to delete this user?
+msg.user-detail.returnback=Back to List
+
+# === User Form / Validation ===
+msg.user-form.titleCreate=Create User
+msg.user-form.titleEdit=Edit User
+msg.user-form.submit=Save
+msg.user-form.username.notEmpty=Username cannot be empty
+msg.user-form.username.size=Username must be between 3 and 50 characters
+msg.user-form.password.notEmpty=Password cannot be empty
+msg.user-form.active.notNull=Must specify if user is active
+msg.user-form.accountNonLocked.notNull=Must specify if account is locked
+msg.user-form.emailVerified.notNull=Must indicate if email is verified
+msg.user-form.mustChangePassword.notNull=Must indicate if user must change password
+msg.user-form.lastPasswordChange.pastOrPresent=Last password change must be past or present
+msg.user-form.passwordExpiresAt.futureOrPresent=Password expiration date must be future or present
+msg.user-form.failedLoginAttempts.min=Failed login attempts cannot be negative
