--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -51,7 +51,7 @@ msg.region-controller.insert.nameExist=El nombre de la Comunidad Autonoma ya exi
 msg.region-controller.insert.error=Error al insertar la Comunidad Autónoma.
 msg.region-controller.update.codeExist=El código de la Comunidad Autonoma ya existe.
 msg.region-controller.update.nameExist=El nombre de la Comunidad Autonoma ya existe.
-msg.region-controller.update.error=Error al insertar la Comunidad Autónoma.
+msg.region-controller.update.error=Error al actualizar la Comunidad Autónoma.
 msg.region-controller.detail.notFound=No se ha encontrado la Comunidad Autónoma solicitada.
 msg.region-controller.detail.error=Se ha producido un error al cargar el detalle de la Comunidad Autónoma.
 
@@ -102,23 +102,26 @@ msg.user-controller.insert.success=Usuario insertado correctamente.
 msg.user-controller.update.success=Usuario actualizado correctamente.
 
 # User.java
+msg.user.id.notNull=El ID del usuario no puede ser nulo.
 msg.user.username.notEmpty=El nombre de usuario no puede estar vacío.
 msg.user.username.size=El nombre de usuario debe tener entre 3 y 50 caracteres.
 msg.user.passwordHash.notEmpty=La contraseña no puede estar vacía.
+msg.user.passwordHash.size=La contraseña debe tener al menos 6 caracteres.
 msg.user.active.notNull=Debe especificarse si el usuario está activo.
 msg.user.accountNonLocked.notNull=Debe especificarse si la cuenta está bloqueada.
+msg.user.emailVerified.notNull=Debe especificarse si el correo electrónico está verificado.
+msg.user.mustChangePassword.notNull=Debe especificarse si el usuario debe cambiar la contraseña.
 msg.user.lastPasswordChange.pastOrPresent=La fecha del último cambio de contraseña no puede ser futura.
 msg.user.passwordExpiresAt.futureOrPresent=La fecha de expiración de la contraseña debe ser actual o futura.
 msg.user.failedLoginAttempts.min=El número de intentos fallidos no puede ser negativo.
-msg.user.emailVerified.notNull=Debe especificarse si el correo electrónico está verificado.
-msg.user.mustChangePassword.notNull=Debe especificarse si el usuario debe cambiar la contraseña.
+
 
 # Province - Entity
 msg.province.code.notEmpty=El código de la provincia es obligatorio.
 msg.province.code.size=El código de la provincia no puede tener más de 10 caracteres.
 msg.province.name.notEmpty=El nombre de la provincia es obligatorio.
 msg.province.name.size=El nombre de la provincia no puede tener más de 100 caracteres.
-msg.province.region.notNull=Debes seleccionar una Comunidad Autónoma para la provincia.
+msg.province.regionId.notNull=Debes seleccionar una Comunidad Autónoma para la provincia.
 
 # ProvinceController
 msg.province-controller.list.error=Error al listar las provincias.
@@ -186,3 +189,39 @@ msg.pagination.info=Página {0} de {1} ({2} registros en total)
 msg.pagination.aria.label=Paginación de elementos
 msg.pagination.prev=Página anterior
 msg.pagination.next=Página siguiente
+
+msg.user-list.returnback=Volver al inicio
+
+# === User Detail ===
+msg.user-detail.title=Detalle del Usuario
+msg.user-detail.id=ID
+msg.user-detail.username=Usuario
+msg.user-detail.active=Activo
+msg.user-detail.accountNonLocked=Cuenta No Bloqueada
+msg.user-detail.emailVerified=Correo Verificado
+msg.user-detail.mustChangePassword=Debe Cambiar Contraseña
+msg.user-detail.lastPasswordChange=Último Cambio de Contraseña
+msg.user-detail.passwordExpiresAt=Contraseña Expira En
+msg.user-detail.failedLoginAttempts=Intentos Fallidos
+msg.user-detail.edit=Editar
+msg.user-detail.delete=Eliminar
+msg.user-detail.confirmDelete=¿Está seguro de eliminar este usuario?
+msg.user-detail.returnback=Volver a la lista
+
+# === User Form / Validation ===
+msg.user-form.titleCreate=Crear Usuario
+msg.user-form.titleEdit=Editar Usuario
+msg.user-form.submit=Guardar
+msg.user-form.username.notEmpty=El nombre de usuario no puede estar vacío
+msg.user-form.username.size=El nombre de usuario debe tener entre 3 y 50 caracteres
+msg.user-form.password.notEmpty=La contraseña no puede estar vacía
+msg.user-form.active.notNull=Debe seleccionar si el usuario está activo
+msg.user-form.accountNonLocked.notNull=Debe seleccionar si la cuenta está bloqueada
+msg.user-form.emailVerified.notNull=Debe indicar si el email está verificado
+msg.user-form.mustChangePassword.notNull=Debe indicar si el usuario debe cambiar la contraseña
+msg.user-form.lastPasswordChange.pastOrPresent=La fecha del último cambio de contraseña debe ser pasada o presente
+msg.user-form.passwordExpiresAt.futureOrPresent=La fecha de expiración de la contraseña debe ser futura o presente
+msg.user-form.failedLoginAttempts.min=El número de intentos fallidos no puede ser negativo
+msg.user-list.viewDetail=Ver Detalles
+
+
