Perfil de usuario (1:1) y subida de imágenes al servidor

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -57,7 +57,6 @@ msg.region-controller.detail.error=An error occurred while loading region detail
 msg.user-list.title=User List
 msg.user-list.add=Add New User
 msg.user-list.id=ID
-msg.user-list.username=Username
 msg.user-list.passwordHash=Hashed password
 msg.user-list.active=Active
 msg.user-list.accountNonLocked=Account Non-Locked
@@ -76,7 +75,7 @@ msg.user-list.confirm=Are you sure?
 # user-form.html
 msg.user-form.add=New User
 msg.user-form.edit=Edit User
-msg.user-form.username=Username
+msg.user-form.email=Email
 msg.user-form.password=Password
 msg.user-form.create=Create
 msg.user-form.update=Update
@@ -91,9 +90,9 @@ msg.user-form.mustChangePassword=Must Change Password
 
 # UserController.java
 msg.user-controller.insert.error=Error inserting the user.
-msg.user-controller.insert.usernameExist=The username already exists.
+msg.user-controller.insert.emailExist=The email already exists.
 msg.user-controller.update.error=Error updating the user.
-msg.user-controller.update.usernameExist=The username already exists.
+msg.user-controller.update.emailExist=The email already exists.
 msg.user-controller.delete.error=Error deleting the user.
 msg.user-controller.delete.success=User successfully deleted.
 msg.user-controller.insert.success=User successfully inserted.
@@ -101,8 +100,8 @@ msg.user-controller.update.success=User successfully updated.
 
 # User.java
 msg.user.id.notNull=User ID cannot be null.
-msg.user.username.notEmpty=The username cannot be empty.
-msg.user.username.size=The username must be between 3 and 50 characters.
+msg.user.email.notEmpty=The email cannot be empty.
+msg.user.email.size=The email must be between 3 and 50 characters.
 msg.user.passwordHash.notEmpty=The password cannot be empty.
 msg.user.passwordHash.size=Password must be at least 6 characters long.
 msg.user.active.notNull=The 'active' field cannot be null.
@@ -192,7 +191,7 @@ msg.user-list.returnback=Back to Home
 msg.user-list.viewDetail=View Detail
 msg.user-detail.title=User Detail
 msg.user-detail.id=ID
-msg.user-detail.username=Username
+msg.user-detail.email=email
 msg.user-detail.active=Active
 msg.user-detail.accountNonLocked=Account Not Locked
 msg.user-detail.emailVerified=Email Verified
@@ -209,8 +208,8 @@ msg.user-detail.returnback=Back to List
 msg.user-form.titleCreate=Create User
 msg.user-form.titleEdit=Edit User
 msg.user-form.submit=Save
-msg.user-form.username.notEmpty=Username cannot be empty
-msg.user-form.username.size=Username must be between 3 and 50 characters
+msg.user-form.email.notEmpty=email cannot be empty
+msg.user-form.email.size=email must be between 3 and 50 characters
 msg.user-form.password.notEmpty=Password cannot be empty
 msg.user-form.active.notNull=Must specify if user is active
 msg.user-form.accountNonLocked.notNull=Must specify if account is locked
@@ -219,3 +218,39 @@ msg.user-form.mustChangePassword.notNull=Must indicate if user must change passw
 msg.user-form.lastPasswordChange.pastOrPresent=Last password change must be past or present
 msg.user-form.passwordExpiresAt.futureOrPresent=Password expiration date must be future or present
 msg.user-form.failedLoginAttempts.min=Failed login attempts cannot be negative
+
+
+# user-profile-form.html
+msg.userProfile.title=My Profile
+msg.userProfile.subtitle=User Profile Management
+msg.userProfile.field.email=Email
+msg.userProfile.field.firstName=First Name
+msg.userProfile.field.lastName=Last Name
+msg.userProfile.field.phoneNumber=Phone Number
+msg.userProfile.field.profileImage=Profile Image 
+msg.userProfile.field.bio=Bio
+msg.userProfile.field.locale=Preferred Language
+msg.userProfile.action.save=Save changes
+msg.userProfile.action.back=Back
+
+# UserProfileController
+msg.userProfile.success=Profile updated successfully
+msg.userProfile.error=The profile could not be saved. Please review the form data.
+
+menu.editProfile=Edit Profile
+menu.changePassword=Change Password
+menu.logout=Logout
+
+msg.user-detail.section.profileData=User profile
+msg.user-detail.profile.empty=This user has no associated profile.
+msg.user-detail.profile.noImage=No profile image
+msg.user-detail.profile.field.firstName=First name
+msg.user-detail.profile.field.lastName=Last name
+msg.user-detail.profile.field.phoneNumber=Phone number
+msg.user-detail.profile.field.locale=Preferred language
+msg.user-detail.profile.field.bio=Bio
+msg.user-detail.profile.field.profileImage=Profile image
+
+msg.userProfile.field.profileImage.placeholder=No profile image set
+msg.userProfile.field.profileImageUpload=New profile picture
+msg.userProfile.field.profileImageUpload.help=Select an image from your device to update your profile picture.
