--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -59,7 +59,7 @@ msg.region-controller.detail.error=Se ha producido un error al cargar el detalle
 msg.user-list.title=Listado de Usuarios
 msg.user-list.add=Agregar Nuevo Usuario
 msg.user-list.id=ID
-msg.user-list.username=Nombre de Usuario
+msg.user-list.email=Email
 msg.user-list.passwordHash=Contraseña hashed
 msg.user-list.active=Activo
 msg.user-list.accountNonLocked=Cuenta No Bloqueada
@@ -78,7 +78,7 @@ msg.user-list.confirm=¿Estás seguro?
 # user-form.html
 msg.user-form.add=Nuevo Usuario
 msg.user-form.edit=Editar Usuario
-msg.user-form.username=Nombre de Usuario
+msg.user-form.email=Email
 msg.user-form.password=Contraseña
 msg.user-form.create=Crear
 msg.user-form.update=Actualizar
@@ -93,9 +93,9 @@ msg.user-form.mustChangePassword=Debe Cambiar Contraseña
 
 # UserController.java
 msg.user-controller.insert.error=Error al insertar el usuario.
-msg.user-controller.insert.usernameExist=El nombre de usuario ya existe.
+msg.user-controller.insert.emailExist=El nombre de usuario ya existe.
 msg.user-controller.update.error=Error al actualizar el usuario.
-msg.user-controller.update.usernameExist=El nombre de usuario ya existe.
+msg.user-controller.update.emailExist=El nombre de usuario ya existe.
 msg.user-controller.delete.error=Error al eliminar el usuario.
 msg.user-controller.delete.success=Usuario eliminado correctamente.
 msg.user-controller.insert.success=Usuario insertado correctamente.
@@ -103,8 +103,8 @@ msg.user-controller.update.success=Usuario actualizado correctamente.
 
 # User.java
 msg.user.id.notNull=El ID del usuario no puede ser nulo.
-msg.user.username.notEmpty=El nombre de usuario no puede estar vacío.
-msg.user.username.size=El nombre de usuario debe tener entre 3 y 50 caracteres.
+msg.user.email.notEmpty=El nombre de usuario no puede estar vacío.
+msg.user.email.size=El nombre de usuario debe tener entre 3 y 50 caracteres.
 msg.user.passwordHash.notEmpty=La contraseña no puede estar vacía.
 msg.user.passwordHash.size=La contraseña debe tener al menos 6 caracteres.
 msg.user.active.notNull=Debe especificarse si el usuario está activo.
@@ -195,7 +195,7 @@ msg.user-list.returnback=Volver al inicio
 # === User Detail ===
 msg.user-detail.title=Detalle del Usuario
 msg.user-detail.id=ID
-msg.user-detail.username=Usuario
+msg.user-detail.email=Usuario
 msg.user-detail.active=Activo
 msg.user-detail.accountNonLocked=Cuenta No Bloqueada
 msg.user-detail.emailVerified=Correo Verificado
@@ -212,8 +212,8 @@ msg.user-detail.returnback=Volver a la lista
 msg.user-form.titleCreate=Crear Usuario
 msg.user-form.titleEdit=Editar Usuario
 msg.user-form.submit=Guardar
-msg.user-form.username.notEmpty=El nombre de usuario no puede estar vacío
-msg.user-form.username.size=El nombre de usuario debe tener entre 3 y 50 caracteres
+msg.user-form.email.notEmpty=El correo no puede estar vacío
+msg.user-form.email.size=El correo debe tener entre 3 y 50 caracteres
 msg.user-form.password.notEmpty=La contraseña no puede estar vacía
 msg.user-form.active.notNull=Debe seleccionar si el usuario está activo
 msg.user-form.accountNonLocked.notNull=Debe seleccionar si la cuenta está bloqueada
@@ -224,4 +224,38 @@ msg.user-form.passwordExpiresAt.futureOrPresent=La fecha de expiración de la co
 msg.user-form.failedLoginAttempts.min=El número de intentos fallidos no puede ser negativo
 msg.user-list.viewDetail=Ver Detalles
 
+# user-profile-form.html
+msg.userProfile.title=Mi perfil
+msg.userProfile.subtitle=Gestión de perfil de usuario
+msg.userProfile.field.email=Correo electrónico
+msg.userProfile.field.firstName=Nombre
+msg.userProfile.field.lastName=Apellidos
+msg.userProfile.field.phoneNumber=Teléfono
+msg.userProfile.field.profileImage=Imagen de perfil
+msg.userProfile.field.bio=Biografía
+msg.userProfile.field.locale=Idioma preferido
+msg.userProfile.action.save=Guardar cambios
+msg.userProfile.action.back=Volver
 
+# UserProfileController
+msg.userProfile.success=Perfil actualizado correctamente
+msg.userProfile.error=No se pudo guardar el perfil. Revisa los datos del formulario.
+
+
+menu.editProfile=Editar perfil
+menu.changePassword=Cambiar contraseña
+menu.logout=Cerrar sesión
+
+msg.user-detail.section.profileData=Perfil del usuario
+msg.user-detail.profile.empty=Este usuario no tiene perfil asociado.
+msg.user-detail.profile.noImage=Sin imagen de perfil
+msg.user-detail.profile.field.firstName=Nombre
+msg.user-detail.profile.field.lastName=Apellidos
+msg.user-detail.profile.field.phoneNumber=Teléfono
+msg.user-detail.profile.field.locale=Idioma preferido
+msg.user-detail.profile.field.bio=Biografía
+msg.user-detail.profile.field.profileImage=Imagen de perfil
+
+msg.userProfile.field.profileImage.placeholder=Sin imagen de perfil establecida
+msg.userProfile.field.profileImageUpload=Nueva imagen de perfil
+msg.userProfile.field.profileImageUpload.help=Selecciona una imagen desde tu dispositivo para actualizar tu foto de perfil.
