Relaciones N:M entre Users y Roles

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -57,6 +57,7 @@ msg.region-controller.detail.error=An error occurred while loading region detail
 msg.user-list.title=User List
 msg.user-list.add=Add New User
 msg.user-list.id=ID
+msg.user-list.email=Email
 msg.user-list.passwordHash=Hashed password
 msg.user-list.active=Active
 msg.user-list.accountNonLocked=Account Non-Locked
@@ -254,3 +255,10 @@ msg.user-detail.profile.field.profileImage=Profile image
 msg.userProfile.field.profileImage.placeholder=No profile image set
 msg.userProfile.field.profileImageUpload=New profile picture
 msg.userProfile.field.profileImageUpload.help=Select an image from your device to update your profile picture.
+msg.user.roles.notempty=You must select at least one role for the user.
+msg.user-form.roles=Roles
+msg.user-form.roles.help=Select one or more roles for this user.
+msg.user-detail.field.roles=Roles
+msg.user-detail.field.roles.empty=This user has no roles assigned.
+msg.user-list.col.roles=Rols
+msg.user-detail.profile.field.roles=Rols
