--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -259,3 +259,11 @@ msg.user-detail.profile.field.profileImage=Imagen de perfil
 msg.userProfile.field.profileImage.placeholder=Sin imagen de perfil establecida
 msg.userProfile.field.profileImageUpload=Nueva imagen de perfil
 msg.userProfile.field.profileImageUpload.help=Selecciona una imagen desde tu dispositivo para actualizar tu foto de perfil.
+
+msg.user.roles.notempty=Debe seleccionar al menos un rol para el usuario.
+msg.user-form.roles=Roles
+msg.user-form.roles.help=Seleccione uno o varios roles para este usuario.
+msg.user-detail.field.roles=Roles
+msg.user-detail.field.roles.empty=El usuario no tiene roles asignados
+msg.user-list.col.roles=Roles
+msg.user-detail.profile.field.roles=Roles
