--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,7 +1,32 @@
-# header.html
+# ===============================
+# Navegación / Menú
+# ===============================
+nav.home=Home
+nav.regions=Regions
+nav.provinces=Provinces
+nav.users=Users
+
+menu.editProfile=Edit Profile
+menu.changePassword=Change Password
+menu.logout=Logout
+
+# ===============================
+# Cabecera
+# ===============================
 msg.title=Ticket Logger
 
-# user-list.html
+# ===============================
+# Mensajes de paginación genéricos
+# ===============================
+msg.pagination.info=Page {0} of {1} ({2} records in total)
+msg.pagination.aria.label=Items pagination
+msg.pagination.prev=Previous page
+msg.pagination.next=Next page
+
+# ===============================
+# Regiones
+# ===============================
+## Listado
 msg.region-list.title=List of Regions
 msg.region-list.add=Add New Region
 msg.region-list.id=ID
@@ -14,7 +39,7 @@ msg.region-list.confirm=Are you sure?
 msg.region-list.returnback=Back to Home
 msg.region-list.viewDetail=View Detail
 
-# user-form.html
+## Formulario
 msg.region-form.add=New Region
 msg.region-form.edit=Edit Region
 msg.region-form.code=Code
@@ -23,7 +48,7 @@ msg.region-form.create=Create
 msg.region-form.update=Update
 msg.region-form.returnback=Return to the list
 
-# region-detail.html
+## Detalle
 msg.region-detail.title=Region detail
 msg.region-detail.section.regionData=Region data
 msg.region-detail.field.id=ID
@@ -37,13 +62,14 @@ msg.region-detail.provinces.col.actions=Actions
 msg.region-detail.provinces.empty=This region has no registered provinces.
 msg.region-detail.action.back=Back to list
 msg.region-detail.viewDetail=View Detail
-# Region.java
+
+## Validaciones
 msg.region.code.notEmpty=The code cannot be empty
 msg.region.code.size=The code must not exceed 2 characters
 msg.region.name.notEmpty=The name cannot be empty
 msg.region.name.size=The name must not exceed 100 characters
 
-# RegionController.java:
+## Controlador
 msg.region-controller.insert.codeExist=The Region code already exists.
 msg.region-controller.insert.nameExist=The Region name already exists.
 msg.region-controller.insert.error=Error inserting the Region.
@@ -53,7 +79,74 @@ msg.region-controller.update.error=Error updating the Region.
 msg.region-controller.detail.notFound=Requested region was not found.
 msg.region-controller.detail.error=An error occurred while loading region details.
 
-# user-list.html
+# ===============================
+# Provincias
+# ===============================
+## Listado
+msg.province-list.title=Province List
+msg.province-list.add=Add New Province
+msg.province-list.id=ID
+msg.province-list.code=Code
+msg.province-list.name=Name
+msg.province-list.region=Region
+msg.province-list.actions=Actions
+msg.province-list.edit=Edit
+msg.province-list.delete=Delete
+msg.province-list.confirm=Are you sure?
+msg.province-list.returnback=Back to Home
+msg.province-list.viewDetail=View Detail
+
+## Formulario
+msg.province-form.add=Add new province
+msg.province-form.edit=Edit province
+msg.province-form.code=Code
+msg.province-form.name=Name
+msg.province-form.region=Region
+msg.province-form.region.select=-- Select a region --
+msg.province-form.create=Create
+msg.province-form.update=Update
+msg.province-form.returnback=Back to list
+
+## Detalle
+msg.province-detail.title=Province detail
+msg.province-detail.section.provinceData=Province data
+msg.province-detail.field.id=ID
+msg.province-detail.field.code=Code
+msg.province-detail.field.name=Name
+msg.province-detail.section.region=Region
+msg.province-detail.region.field.id=ID
+msg.province-detail.region.field.code=Code
+msg.province-detail.region.field.name=Name
+msg.province-detail.region.empty=This province has no associated region.
+msg.province-detail.region.viewDetail=View region detail
+msg.province-detail.region.viewDetail.title=View details for {0}
+msg.province-detail.action.back=Back to list
+
+## Validaciones
+msg.province.code.notEmpty=Province code is required.
+msg.province.code.size=Province code cannot be longer than 10 characters.
+msg.province.name.notEmpty=Province name is required.
+msg.province.name.size=Province name cannot be longer than 100 characters.
+msg.province.regionId.notNull=You must select a region for the province.
+
+## Controlador
+msg.province-controller.list.error=An error occurred while listing provinces.
+msg.province-controller.edit.notFound=The specified province was not found.
+msg.province-controller.edit.error=An error occurred while loading the province data.
+msg.province-controller.insert.codeExist=Province code already exists. Please choose another one.
+msg.province-controller.insert.nameExist=Province name already exists. Please choose another one.
+msg.province-controller.insert.error=An error occurred while creating the province.
+msg.province-controller.update.codeExist=Province code already exists for another province.
+msg.province-controller.update.nameExist=Province name already exists for another province.
+msg.province-controller.update.error=An error occurred while updating the province.
+msg.province-controller.delete.error=An error occurred while deleting the province.
+msg.province-controller.detail.notFound=Requested province was not found.
+msg.province-controller.detail.error=An error occurred while loading province details.
+
+# ===============================
+# Usuarios
+# ===============================
+## Listado
 msg.user-list.title=User List
 msg.user-list.add=Add New User
 msg.user-list.id=ID
@@ -72,8 +165,11 @@ msg.user-list.delete=Delete
 msg.user-list.yes=Yes
 msg.user-list.no=No
 msg.user-list.confirm=Are you sure?
+msg.user-list.returnback=Back to Home
+msg.user-list.viewDetail=View Detail
+msg.user-list.col.roles=Roles
 
-# user-form.html
+## Formulario
 msg.user-form.add=New User
 msg.user-form.edit=Edit User
 msg.user-form.email=Email
@@ -88,18 +184,38 @@ msg.user-form.passwordExpiresAt=Password Expires At
 msg.user-form.failedLoginAttempts=Failed Login Attempts
 msg.user-form.emailVerified=Email Verified
 msg.user-form.mustChangePassword=Must Change Password
+msg.user-form.roles=Roles
+msg.user-form.roles.help=Select one or more roles for this user.
 
-# UserController.java
-msg.user-controller.insert.error=Error inserting the user.
-msg.user-controller.insert.emailExist=The email already exists.
-msg.user-controller.update.error=Error updating the user.
-msg.user-controller.update.emailExist=The email already exists.
-msg.user-controller.delete.error=Error deleting the user.
-msg.user-controller.delete.success=User successfully deleted.
-msg.user-controller.insert.success=User successfully inserted.
-msg.user-controller.update.success=User successfully updated.
+## Detalle
+msg.user-detail.title=User Detail
+msg.user-detail.id=ID
+msg.user-detail.email=Email
+msg.user-detail.active=Active
+msg.user-detail.accountNonLocked=Account Not Locked
+msg.user-detail.emailVerified=Email Verified
+msg.user-detail.mustChangePassword=Must Change Password
+msg.user-detail.lastPasswordChange=Last Password Change
+msg.user-detail.passwordExpiresAt=Password Expires At
+msg.user-detail.failedLoginAttempts=Failed Login Attempts
+msg.user-detail.edit=Edit
+msg.user-detail.delete=Delete
+msg.user-detail.confirmDelete=Are you sure you want to delete this user?
+msg.user-detail.returnback=Back to List
+msg.user-detail.section.profileData=User profile
+msg.user-detail.profile.empty=This user has no associated profile.
+msg.user-detail.profile.noImage=No profile image
+msg.user-detail.profile.field.firstName=First name
+msg.user-detail.profile.field.lastName=Last name
+msg.user-detail.profile.field.phoneNumber=Phone number
+msg.user-detail.profile.field.locale=Preferred language
+msg.user-detail.profile.field.bio=Bio
+msg.user-detail.profile.field.profileImage=Profile image
+msg.user-detail.field.roles=Roles
+msg.user-detail.field.roles.empty=This user has no roles assigned.
+msg.user-profile.field.roles=Roles
 
-# User.java
+## Validaciones
 msg.user.id.notNull=User ID cannot be null.
 msg.user.email.notEmpty=The email cannot be empty.
 msg.user.email.size=The email must be between 3 and 50 characters.
@@ -112,105 +228,8 @@ msg.user.mustChangePassword.notNull=The 'mustChangePassword' field cannot be nul
 msg.user.lastPasswordChange.pastOrPresent=The last password change date cannot be in the future.
 msg.user.passwordExpiresAt.futureOrPresent=The password expiration date must be current or future.
 msg.user.failedLoginAttempts.min=The number of failed login attempts cannot be negative.
-
-
-# Province - Entity
-msg.province.code.notEmpty=Province code is required.
-msg.province.code.size=Province code cannot be longer than 10 characters.
-msg.province.name.notEmpty=Province name is required.
-msg.province.name.size=Province name cannot be longer than 100 characters.
-msg.province.regionId.notNull=You must select a region for the province.
-
-# ProvinceController
-msg.province-controller.list.error=An error occurred while listing provinces.
-msg.province-controller.edit.notFound=The specified province was not found.
-msg.province-controller.edit.error=An error occurred while loading the province data.
-msg.province-controller.insert.codeExist=Province code already exists. Please choose another one.
-msg.province-controller.insert.nameExist=Province name already exists. Please choose another one.
-msg.province-controller.insert.error=An error occurred while creating the province.
-msg.province-controller.update.codeExist=Province code already exists for another province.
-msg.province-controller.update.nameExist=Province name already exists for another province.
-msg.province-controller.update.error=An error occurred while updating the province.
-msg.province-controller.delete.error=An error occurred while deleting the province.
-msg.province-controller.detail.notFound=Requested province was not found.
-msg.province-controller.detail.error=An error occurred while loading province details.
-
-# Province list
-msg.province-list.title=Province List
-msg.province-list.add=Add New Province
-msg.province-list.id=ID
-msg.province-list.code=Code
-msg.province-list.name=Name
-msg.province-list.region=Region
-msg.province-list.actions=Actions
-msg.province-list.edit=Edit
-msg.province-list.delete=Delete
-msg.province-list.confirm=Are you sure?
-msg.province-list.returnback=Back to Home
-msg.province-list.viewDetail=View Detail
-
-# Province Form
-msg.province-form.add=Add new province
-msg.province-form.edit=Edit province
-msg.province-form.code=Code
-msg.province-form.name=Name
-msg.province-form.region=Region
-msg.province-form.region.select=-- Select a region --
-msg.province-form.create=Create
-msg.province-form.update=Update
-msg.province-form.returnback=Back to list
-
-# province-detail.html
-msg.province-detail.title=Province detail
-msg.province-detail.section.provinceData=Province data
-msg.province-detail.field.id=ID
-msg.province-detail.field.code=Code
-msg.province-detail.field.name=Name
-msg.province-detail.section.region=Region
-msg.province-detail.region.field.id=ID
-msg.province-detail.region.field.code=Code
-msg.province-detail.region.field.name=Name
-msg.province-detail.region.empty=This province has no associated region.
-msg.province-detail.region.viewDetail=View region detail
-msg.province-detail.region.viewDetail.title=View details for {0}
-msg.province-detail.action.back=Back to list
-
-nav.home=Home
-nav.regions=Regions
-nav.provinces=Provinces
-nav.users=Users
-
-# Mensajes de paginación genéricos para toda la app
-msg.pagination.info=Page {0} of {1} ({2} records in total)
-msg.pagination.aria.label=Items pagination
-msg.pagination.prev=Previous page
-msg.pagination.next=Next page
-
-msg.user-list.returnback=Back to Home
-
-# === User Detail ===
-msg.user-list.viewDetail=View Detail
-msg.user-detail.title=User Detail
-msg.user-detail.id=ID
-msg.user-detail.email=email
-msg.user-detail.active=Active
-msg.user-detail.accountNonLocked=Account Not Locked
-msg.user-detail.emailVerified=Email Verified
-msg.user-detail.mustChangePassword=Must Change Password
-msg.user-detail.lastPasswordChange=Last Password Change
-msg.user-detail.passwordExpiresAt=Password Expires At
-msg.user-detail.failedLoginAttempts=Failed Login Attempts
-msg.user-detail.edit=Edit
-msg.user-detail.delete=Delete
-msg.user-detail.confirmDelete=Are you sure you want to delete this user?
-msg.user-detail.returnback=Back to List
-
-# === User Form / Validation ===
-msg.user-form.titleCreate=Create User
-msg.user-form.titleEdit=Edit User
-msg.user-form.submit=Save
-msg.user-form.email.notEmpty=email cannot be empty
-msg.user-form.email.size=email must be between 3 and 50 characters
+msg.user-form.email.notEmpty=Email cannot be empty
+msg.user-form.email.size=Email must be between 3 and 50 characters
 msg.user-form.password.notEmpty=Password cannot be empty
 msg.user-form.active.notNull=Must specify if user is active
 msg.user-form.accountNonLocked.notNull=Must specify if account is locked
@@ -219,9 +238,23 @@ msg.user-form.mustChangePassword.notNull=Must indicate if user must change passw
 msg.user-form.lastPasswordChange.pastOrPresent=Last password change must be past or present
 msg.user-form.passwordExpiresAt.futureOrPresent=Password expiration date must be future or present
 msg.user-form.failedLoginAttempts.min=Failed login attempts cannot be negative
+msg.user.roles.notempty=You must select at least one role for the user.
 
+## Controlador
+msg.user-controller.insert.error=Error inserting the user.
+msg.user-controller.insert.emailExist=The email already exists.
+msg.user-controller.update.error=Error updating the user.
+msg.user-controller.update.emailExist=The email already exists.
+msg.user-controller.delete.error=Error deleting the user.
+msg.user-controller.delete.success=User successfully deleted.
+msg.user-controller.insert.success=User successfully inserted.
+msg.user-controller.update.success=User successfully updated.
+msg.user-controller.edit.notFound=User not found
+msg.user-controller.edit.notfound=Could not find the user
 
-# user-profile-form.html
+# ===============================
+# Perfil de usuario
+# ===============================
 msg.userProfile.title=My Profile
 msg.userProfile.subtitle=User Profile Management
 msg.userProfile.field.email=Email
@@ -233,32 +266,19 @@ msg.userProfile.field.bio=Bio
 msg.userProfile.field.locale=Preferred Language
 msg.userProfile.action.save=Save changes
 msg.userProfile.action.back=Back
-
-# UserProfileController
-msg.userProfile.success=Profile updated successfully
-msg.userProfile.error=The profile could not be saved. Please review the form data.
-
-menu.editProfile=Edit Profile
-menu.changePassword=Change Password
-menu.logout=Logout
-
-msg.user-detail.section.profileData=User profile
-msg.user-detail.profile.empty=This user has no associated profile.
-msg.user-detail.profile.noImage=No profile image
-msg.user-detail.profile.field.firstName=First name
-msg.user-detail.profile.field.lastName=Last name
-msg.user-detail.profile.field.phoneNumber=Phone number
-msg.user-detail.profile.field.locale=Preferred language
-msg.user-detail.profile.field.bio=Bio
-msg.user-detail.profile.field.profileImage=Profile image
-
 msg.userProfile.field.profileImage.placeholder=No profile image set
 msg.userProfile.field.profileImageUpload=New profile picture
 msg.userProfile.field.profileImageUpload.help=Select an image from your device to update your profile picture.
-msg.user.roles.notempty=You must select at least one role for the user.
-msg.user-form.roles=Roles
-msg.user-form.roles.help=Select one or more roles for this user.
-msg.user-detail.field.roles=Roles
-msg.user-detail.field.roles.empty=This user has no roles assigned.
-msg.user-list.col.roles=Rols
-msg.user-detail.profile.field.roles=Rols
+msg.userProfile.success=Profile updated successfully
+msg.userProfile.error=The profile could not be saved. Please review the form data.
+msg.userProfile.firstName.notblank=First name cannot be empty
+msg.userProfile.firstName.size=First name cannot exceed 60 characters
+msg.userProfile.lastName.notblank=Last name cannot be empty
+msg.userProfile.lastName.size=Last name cannot exceed 80 characters
+msg.userProfile.phoneNumber.size=Phone number cannot exceed 30 characters
+msg.userProfile.profileImage.size=Profile image path cannot exceed 255 characters
+msg.userProfile.bio.size=Bio cannot exceed 500 characters
+msg.userProfile.locale.size=Locale code cannot exceed 10 characters
+msg.userProfile.image.invalidType=Uploaded file is not a valid image
+msg.userProfile.image.tooLarge=Image file exceeds the maximum allowed size (2MB)
+msg.userProfile.image.saveError=Could not save profile image
