--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,7 +1,32 @@
-# header.html
+# ===============================
+# Navegación / Menú
+# ===============================
+nav.home=Inicio
+nav.regions=Comunidades Autónomas
+nav.provinces=Provincias
+nav.users=Usuarios
+
+menu.editProfile=Editar perfil
+menu.changePassword=Cambiar contraseña
+menu.logout=Cerrar sesión
+
+# ===============================
+# Cabecera
+# ===============================
 msg.title=Ticket Logger
 
-# user-list.html
+# ===============================
+# Mensajes de paginación genéricos
+# ===============================
+msg.pagination.info=Página {0} de {1} ({2} registros en total)
+msg.pagination.aria.label=Paginación de elementos
+msg.pagination.prev=Página anterior
+msg.pagination.next=Página siguiente
+
+# ===============================
+# Regiones
+# ===============================
+## Listado
 msg.region-list.title=Listado de Comunidades Autónomas
 msg.region-list.add=Agregar Nueva Comunidad Autónoma
 msg.region-list.id=ID
@@ -14,8 +39,7 @@ msg.region-list.confirm=¿Estás seguro?
 msg.region-list.returnback=Volver al inicio
 msg.region-list.viewDetail=Ver detalle
 
-
-# user-form.html
+## Formulario
 msg.region-form.add=Nueva Comunidad Autónoma
 msg.region-form.edit=Editar Comunidad Autónoma
 msg.region-form.code=Código
@@ -24,7 +48,7 @@ msg.region-form.create=Crear
 msg.region-form.update=Actualizar
 msg.region-form.returnback=Volver a la lista
 
-# region-detail.html
+## Detalle
 msg.region-detail.title=Detalle de la Comunidad Autónoma
 msg.region-detail.section.regionData=Datos de la Comunidad Autónoma
 msg.region-detail.field.id=ID
@@ -39,13 +63,13 @@ msg.region-detail.provinces.empty=Esta Comunidad Autónoma no tiene provincias r
 msg.region-detail.action.back=Volver al listado
 msg.region-detail.viewDetail=Ver Detalle
 
-# Region.java
+## Validaciones
 msg.region.code.notEmpty=El código no puede estar vacío
 msg.region.code.size=El código no puede tener más de 2 caracteres
 msg.region.name.notEmpty=El nombre no puede estar vacío
 msg.region.name.size=El nombre no puede tener más de 100 caracteres
 
-# RegionController.java:
+## Controlador
 msg.region-controller.insert.codeExist=El código de la Comunidad Autonoma ya existe.
 msg.region-controller.insert.nameExist=El nombre de la Comunidad Autonoma ya existe.
 msg.region-controller.insert.error=Error al insertar la Comunidad Autónoma.
@@ -55,7 +79,73 @@ msg.region-controller.update.error=Error al actualizar la Comunidad Autónoma.
 msg.region-controller.detail.notFound=No se ha encontrado la Comunidad Autónoma solicitada.
 msg.region-controller.detail.error=Se ha producido un error al cargar el detalle de la Comunidad Autónoma.
 
-# user-list.html
+# ===============================
+# Provincias
+# ===============================
+## Listado
+msg.province-list.title=Listado de Provincias
+msg.province-list.add=Agregar Nueva Provincia
+msg.province-list.id=ID
+msg.province-list.code=Código
+msg.province-list.name=Nombre
+msg.province-list.region=Comunidad Autónoma
+msg.province-list.actions=Acciones
+msg.province-list.edit=Editar
+msg.province-list.delete=Eliminar
+msg.province-list.confirm=¿Estás seguro?
+msg.province-list.returnback=Volver al inicio
+msg.province-list.viewDetail=Ver Detalle
+
+## Formulario
+msg.province-form.add=Agregar nueva provincia
+msg.province-form.edit=Editar provincia
+msg.province-form.code=Código
+msg.province-form.name=Nombre
+msg.province-form.region=Comunidad Autónoma
+msg.province-form.region.select=-- Selecciona una comunidad autónoma --
+msg.province-form.create=Crear
+msg.province-form.update=Actualizar
+msg.province-form.returnback=Volver al listado
+
+## Detalle
+msg.province-detail.title=Detalle de la provincia
+msg.province-detail.section.provinceData=Datos de la provincia
+msg.province-detail.field.id=ID
+msg.province-detail.field.code=Código
+msg.province-detail.field.name=Nombre
+msg.province-detail.section.region=Región
+msg.province-detail.region.field.id=ID
+msg.province-detail.region.field.code=Código
+msg.province-detail.region.field.name=Nombre
+msg.province-detail.region.empty=Esta provincia no tiene región asociada.
+msg.province-detail.region.viewDetail=Ver detalle de la región
+msg.province-detail.action.back=Volver al listado
+
+## Validaciones
+msg.province.code.notEmpty=El código de la provincia es obligatorio.
+msg.province.code.size=El código de la provincia no puede tener más de 10 caracteres.
+msg.province.name.notEmpty=El nombre de la provincia es obligatorio.
+msg.province.name.size=El nombre de la provincia no puede tener más de 100 caracteres.
+msg.province.regionId.notNull=Debes seleccionar una Comunidad Autónoma para la provincia.
+
+## Controlador
+msg.province-controller.list.error=Error al listar las provincias.
+msg.province-controller.edit.notFound=No se ha encontrado la provincia especificada.
+msg.province-controller.edit.error=Error al cargar los datos de la provincia.
+msg.province-controller.insert.nameExist=El nombre de la provincia ya existe. Por favor, elige otro.
+msg.province-controller.insert.codeExist=El código de la provincia ya existe. Por favor, elige otro.
+msg.province-controller.insert.error=Se ha producido un error al crear la provincia.
+msg.province-controller.update.codeExist=El código de la provincia ya existe en otra provincia.
+msg.province-controller.update.nameExist=El nombre de la provincia ya existe. Por favor, elige otro.
+msg.province-controller.update.error=Se ha producido un error al actualizar la provincia.
+msg.province-controller.delete.error=Se ha producido un error al eliminar la provincia.
+msg.province-controller.detail.notFound=No se ha encontrado la provincia solicitada.
+msg.province-controller.detail.error=Se ha producido un error al cargar el detalle de la provincia.
+
+# ===============================
+# Usuarios
+# ===============================
+## Listado
 msg.user-list.title=Listado de Usuarios
 msg.user-list.add=Agregar Nuevo Usuario
 msg.user-list.id=ID
@@ -74,8 +164,11 @@ msg.user-list.delete=Eliminar
 msg.user-list.yes=Sí
 msg.user-list.no=No
 msg.user-list.confirm=¿Estás seguro?
+msg.user-list.returnback=Volver al inicio
+msg.user-list.viewDetail=Ver Detalles
+msg.user-list.col.roles=Roles
 
-# user-form.html
+## Formulario
 msg.user-form.add=Nuevo Usuario
 msg.user-form.edit=Editar Usuario
 msg.user-form.email=Email
@@ -90,109 +183,10 @@ msg.user-form.passwordExpiresAt=Contraseña Expira En
 msg.user-form.failedLoginAttempts=Intentos de Inicio de Sesión Fallidos
 msg.user-form.emailVerified=Correo Verificado
 msg.user-form.mustChangePassword=Debe Cambiar Contraseña
+msg.user-form.roles=Roles
+msg.user-form.roles.help=Seleccione uno o varios roles para este usuario.
 
-# UserController.java
-msg.user-controller.insert.error=Error al insertar el usuario.
-msg.user-controller.insert.emailExist=El nombre de usuario ya existe.
-msg.user-controller.update.error=Error al actualizar el usuario.
-msg.user-controller.update.emailExist=El nombre de usuario ya existe.
-msg.user-controller.delete.error=Error al eliminar el usuario.
-msg.user-controller.delete.success=Usuario eliminado correctamente.
-msg.user-controller.insert.success=Usuario insertado correctamente.
-msg.user-controller.update.success=Usuario actualizado correctamente.
-
-# User.java
-msg.user.id.notNull=El ID del usuario no puede ser nulo.
-msg.user.email.notEmpty=El nombre de usuario no puede estar vacío.
-msg.user.email.size=El nombre de usuario debe tener entre 3 y 50 caracteres.
-msg.user.passwordHash.notEmpty=La contraseña no puede estar vacía.
-msg.user.passwordHash.size=La contraseña debe tener al menos 6 caracteres.
-msg.user.active.notNull=Debe especificarse si el usuario está activo.
-msg.user.accountNonLocked.notNull=Debe especificarse si la cuenta está bloqueada.
-msg.user.emailVerified.notNull=Debe especificarse si el correo electrónico está verificado.
-msg.user.mustChangePassword.notNull=Debe especificarse si el usuario debe cambiar la contraseña.
-msg.user.lastPasswordChange.pastOrPresent=La fecha del último cambio de contraseña no puede ser futura.
-msg.user.passwordExpiresAt.futureOrPresent=La fecha de expiración de la contraseña debe ser actual o futura.
-msg.user.failedLoginAttempts.min=El número de intentos fallidos no puede ser negativo.
-
-
-# Province - Entity
-msg.province.code.notEmpty=El código de la provincia es obligatorio.
-msg.province.code.size=El código de la provincia no puede tener más de 10 caracteres.
-msg.province.name.notEmpty=El nombre de la provincia es obligatorio.
-msg.province.name.size=El nombre de la provincia no puede tener más de 100 caracteres.
-msg.province.regionId.notNull=Debes seleccionar una Comunidad Autónoma para la provincia.
-
-# ProvinceController
-msg.province-controller.list.error=Error al listar las provincias.
-msg.province-controller.edit.notFound=No se ha encontrado la provincia especificada.
-msg.province-controller.edit.error=Error al cargar los datos de la provincia.
-msg.province-controller.insert.nameExist=El nombre de la provincia ya existe. Por favor, elige otro.
-msg.province-controller.insert.codeExist=El código de la provincia ya existe. Por favor, elige otro.
-msg.province-controller.insert.error=Se ha producido un error al crear la provincia.
-msg.province-controller.update.codeExist=El código de la provincia ya existe en otra provincia.
-msg.province-controller.update.nameExist=El nombre de la provincia ya existe. Por favor, elige otro.
-msg.province-controller.update.error=Se ha producido un error al actualizar la provincia.
-msg.province-controller.delete.error=Se ha producido un error al eliminar la provincia.
-msg.province-controller.detail.notFound=No se ha encontrado la provincia solicitada.
-msg.province-controller.detail.error=Se ha producido un error al cargar el detalle de la provincia.
-
-# Province list
-msg.province-list.title=Listado de Provincias
-msg.province-list.add=Agregar Nueva Provincia
-msg.province-list.id=ID
-msg.province-list.code=Código
-msg.province-list.name=Nombre
-msg.province-list.region=Comunidad Autónoma
-msg.province-list.actions=Acciones
-msg.province-list.edit=Editar
-msg.province-list.delete=Eliminar
-msg.province-list.confirm=¿Estás seguro?
-msg.province-list.returnback=Volver al inicio
-msg.province-list.viewDetail=Ver Detalle
-
-
-# Province Form
-msg.province-form.add=Agregar nueva provincia
-msg.province-form.edit=Editar provincia
-msg.province-form.code=Código
-msg.province-form.name=Nombre
-msg.province-form.region=Comunidad Autónoma
-msg.province-form.region.select=-- Selecciona una comunidad autónoma --
-msg.province-form.create=Crear
-msg.province-form.update=Actualizar
-msg.province-form.returnback=Volver al listado
-
-# province-detail.html
-msg.province-detail.title=Detalle de la provincia
-msg.province-detail.section.provinceData=Datos de la provincia
-msg.province-detail.field.id=ID
-msg.province-detail.field.code=Código
-msg.province-detail.field.name=Nombre
-# Región asociada a la provincia
-msg.province-detail.section.region=Región
-msg.province-detail.region.field.id=ID
-msg.province-detail.region.field.code=Código
-msg.province-detail.region.field.name=Nombre
-msg.province-detail.region.empty=Esta provincia no tiene región asociada.
-# Acciones relativas a la región (desde province-detail)
-msg.province-detail.region.viewDetail=Ver detalle de la región
-msg.province-detail.action.back=Volver al listado
-
-nav.home=Inicio
-nav.regions=Comunidades Autónomas
-nav.provinces=Provincias
-nav.users=Usuarios
-
-# Mensajes de paginación genéricos para toda la app
-msg.pagination.info=Página {0} de {1} ({2} registros en total)
-msg.pagination.aria.label=Paginación de elementos
-msg.pagination.prev=Página anterior
-msg.pagination.next=Página siguiente
-
-msg.user-list.returnback=Volver al inicio
-
-# === User Detail ===
+## Detalle
 msg.user-detail.title=Detalle del Usuario
 msg.user-detail.id=ID
 msg.user-detail.email=Usuario
@@ -207,11 +201,32 @@ msg.user-detail.edit=Editar
 msg.user-detail.delete=Eliminar
 msg.user-detail.confirmDelete=¿Está seguro de eliminar este usuario?
 msg.user-detail.returnback=Volver a la lista
+msg.user-detail.section.profileData=Perfil del usuario
+msg.user-detail.profile.empty=Este usuario no tiene perfil asociado.
+msg.user-detail.profile.noImage=Sin imagen de perfil
+msg.user-detail.profile.field.firstName=Nombre
+msg.user-detail.profile.field.lastName=Apellidos
+msg.user-detail.profile.field.phoneNumber=Teléfono
+msg.user-detail.profile.field.locale=Idioma preferido
+msg.user-detail.profile.field.bio=Biografía
+msg.user-detail.profile.field.profileImage=Imagen de perfil
+msg.user-detail.field.roles=Roles
+msg.user-detail.field.roles.empty=El usuario no tiene roles asignados
+msg.user-detail.profile.field.roles=Roles
 
-# === User Form / Validation ===
-msg.user-form.titleCreate=Crear Usuario
-msg.user-form.titleEdit=Editar Usuario
-msg.user-form.submit=Guardar
+## Validaciones
+msg.user.id.notNull=El ID del usuario no puede ser nulo.
+msg.user.email.notEmpty=El nombre de usuario no puede estar vacío.
+msg.user.email.size=El nombre de usuario debe tener entre 3 y 50 caracteres.
+msg.user.passwordHash.notEmpty=La contraseña no puede estar vacía.
+msg.user.passwordHash.size=La contraseña debe tener al menos 6 caracteres.
+msg.user.active.notNull=Debe especificarse si el usuario está activo.
+msg.user.accountNonLocked.notNull=Debe especificarse si la cuenta está bloqueada.
+msg.user.emailVerified.notNull=Debe especificarse si el correo electrónico está verificado.
+msg.user.mustChangePassword.notNull=Debe especificarse si el usuario debe cambiar la contraseña.
+msg.user.lastPasswordChange.pastOrPresent=La fecha del último cambio de contraseña no puede ser futura.
+msg.user.passwordExpiresAt.futureOrPresent=La fecha de expiración de la contraseña debe ser actual o futura.
+msg.user.failedLoginAttempts.min=El número de intentos fallidos no puede ser negativo.
 msg.user-form.email.notEmpty=El correo no puede estar vacío
 msg.user-form.email.size=El correo debe tener entre 3 y 50 caracteres
 msg.user-form.password.notEmpty=La contraseña no puede estar vacía
@@ -222,9 +237,22 @@ msg.user-form.mustChangePassword.notNull=Debe indicar si el usuario debe cambiar
 msg.user-form.lastPasswordChange.pastOrPresent=La fecha del último cambio de contraseña debe ser pasada o presente
 msg.user-form.passwordExpiresAt.futureOrPresent=La fecha de expiración de la contraseña debe ser futura o presente
 msg.user-form.failedLoginAttempts.min=El número de intentos fallidos no puede ser negativo
-msg.user-list.viewDetail=Ver Detalles
 
-# user-profile-form.html
+## Controlador
+msg.user-controller.insert.error=Error al insertar el usuario.
+msg.user-controller.insert.emailExist=El nombre de usuario ya existe.
+msg.user-controller.update.error=Error al actualizar el usuario.
+msg.user-controller.update.emailExist=El nombre de usuario ya existe.
+msg.user-controller.delete.error=Error al eliminar el usuario.
+msg.user-controller.delete.success=Usuario eliminado correctamente.
+msg.user-controller.insert.success=Usuario insertado correctamente.
+msg.user-controller.update.success=Usuario actualizado correctamente.
+msg.user-controller.edit.notFound=No se encontró el usuario
+msg.user-controller.edit.notfound=No se pudo encontrar el usuario
+
+# ===============================
+# Perfil de usuario
+# ===============================
 msg.userProfile.title=Mi perfil
 msg.userProfile.subtitle=Gestión de perfil de usuario
 msg.userProfile.field.email=Correo electrónico
@@ -236,34 +264,24 @@ msg.userProfile.field.bio=Biografía
 msg.userProfile.field.locale=Idioma preferido
 msg.userProfile.action.save=Guardar cambios
 msg.userProfile.action.back=Volver
-
-# UserProfileController
-msg.userProfile.success=Perfil actualizado correctamente
-msg.userProfile.error=No se pudo guardar el perfil. Revisa los datos del formulario.
-
-
-menu.editProfile=Editar perfil
-menu.changePassword=Cambiar contraseña
-menu.logout=Cerrar sesión
-
-msg.user-detail.section.profileData=Perfil del usuario
-msg.user-detail.profile.empty=Este usuario no tiene perfil asociado.
-msg.user-detail.profile.noImage=Sin imagen de perfil
-msg.user-detail.profile.field.firstName=Nombre
-msg.user-detail.profile.field.lastName=Apellidos
-msg.user-detail.profile.field.phoneNumber=Teléfono
-msg.user-detail.profile.field.locale=Idioma preferido
-msg.user-detail.profile.field.bio=Biografía
-msg.user-detail.profile.field.profileImage=Imagen de perfil
-
 msg.userProfile.field.profileImage.placeholder=Sin imagen de perfil establecida
 msg.userProfile.field.profileImageUpload=Nueva imagen de perfil
 msg.userProfile.field.profileImageUpload.help=Selecciona una imagen desde tu dispositivo para actualizar tu foto de perfil.
-
+msg.userProfile.success=Perfil actualizado correctamente
+msg.userProfile.error=No se pudo guardar el perfil. Revisa los datos del formulario.
 msg.user.roles.notempty=Debe seleccionar al menos un rol para el usuario.
-msg.user-form.roles=Roles
-msg.user-form.roles.help=Seleccione uno o varios roles para este usuario.
-msg.user-detail.field.roles=Roles
-msg.user-detail.field.roles.empty=El usuario no tiene roles asignados
-msg.user-list.col.roles=Roles
-msg.user-detail.profile.field.roles=Roles
+
+# Validaciones UserProfileFormDTO
+msg.userProfile.firstName.notblank=El nombre no puede estar vacío
+msg.userProfile.firstName.size=El nombre no puede tener más de 60 caracteres
+msg.userProfile.lastName.notblank=El apellido no puede estar vacío
+msg.userProfile.lastName.size=El apellido no puede tener más de 80 caracteres
+msg.userProfile.phoneNumber.size=El número de teléfono no puede tener más de 30 caracteres
+msg.userProfile.profileImage.size=La ruta de la imagen de perfil no puede superar los 255 caracteres
+msg.userProfile.bio.size=La biografía no puede superar los 500 caracteres
+msg.userProfile.locale.size=El código de idioma no puede superar los 10 caracteres
+
+# Mensajes de imagen
+msg.userProfile.image.invalidType=El archivo subido no es una imagen válida
+msg.userProfile.image.tooLarge=El archivo de imagen supera el tamaño máximo permitido (2MB)
+msg.userProfile.image.saveError=No se pudo guardar la imagen de perfil
