Refactor de Spring Data funcionando

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -57,7 +57,7 @@ msg.region-detail.field.name=Nombre
 msg.region-detail.section.provinces=Provincias
 msg.region-detail.provinces.col.id=ID
 msg.region-detail.provinces.col.code=Código
-msg.region-detail.provinces.col.name=Nombre
+msg.region-detail.provinces.col.name=NombreNombre
 msg.region-detail.provinces.col.actions=Acciones
 msg.region-detail.provinces.empty=Esta Comunidad Autónoma no tiene provincias registradas.
 msg.region-detail.action.back=Volver al listado
@@ -216,8 +216,8 @@ msg.user-detail.profile.field.roles=Roles
 
 ## Validaciones
 msg.user.id.notNull=El ID del usuario no puede ser nulo.
-msg.user.email.notEmpty=El nombre de usuario no puede estar vacío.
-msg.user.email.size=El nombre de usuario debe tener entre 3 y 50 caracteres.
+msg.user.email.notEmpty=El email no puede estar vacío.
+msg.user.email.size=El email debe tener entre 3 y 50 caracteres.
 msg.user.passwordHash.notEmpty=La contraseña no puede estar vacía.
 msg.user.passwordHash.size=La contraseña debe tener al menos 6 caracteres.
 msg.user.active.notNull=Debe especificarse si el usuario está activo.
