--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -210,3 +210,11 @@ msg.userProfile.image.invalidType=Uploaded file is not a valid image
 msg.userProfile.image.tooLarge=Image file exceeds the maximum allowed size (2MB)
 msg.userProfile.image.saveError=Could not save profile image
 msg.user-profile.success=Profile updated successfully
+
+# OVERRIDE LOGIN MESSAGES
+spring.security.ui.login.title=Login
+spring.security.ui.login.username=Username
+spring.security.ui.login.password=Password
+spring.security.ui.login.submit=Sign In
+spring.security.ui.login.register=Register
+spring.security.ui.login.forgot=Forgot password
