Modificación de Spring security para el acceso a reseteo de password e internaciolización

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -210,6 +210,8 @@ msg.userProfile.image.invalidType=Uploaded file is not a valid image
 msg.userProfile.image.tooLarge=Image file exceeds the maximum allowed size (2MB)
 msg.userProfile.image.saveError=Could not save profile image
 msg.user-profile.success=Profile updated successfully
+msg.userProfile.firstName.notblank=Firstname can not be blank.
+msg.userProfile.lastName.notblank=Lastname can not be blank.
 
 # OVERRIDE LOGIN MESSAGES
 spring.security.ui.login.title=Login
@@ -218,6 +220,7 @@ spring.security.ui.login.password=Password
 spring.security.ui.login.submit=Sign In
 spring.security.ui.login.register=Register
 spring.security.ui.login.forgot=Forgot password
+spring.security.ui.login.error=Introduce an user and/or password valid.
 
 # Email de reseteo de la contraseña
 mail.passwordreset.subject=Password reset
