--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -236,7 +236,8 @@ msg.userProfile.action.back=Volver
 msg.userProfile.field.profileImageUpload=Nueva imagen de perfil
 msg.userProfile.field.profileImageUpload.help=Selecciona una imagen desde tu dispositivo para actualizar tu foto de perfil.
 msg.userProfile.error=No se pudo guardar el perfil. Revisa los datos del formulario.
-
+msg.userProfile.firstName.notblank=El nombre no puede estar vacío.
+msg.userProfile.lastName.notblank=El apellido no puede estar vacío.
 
 # Mensajes de imagen
 msg.userProfile.image.invalidType=El archivo subido no es una imagen válida
@@ -253,6 +254,7 @@ spring.security.ui.login.password=Contraseña
 spring.security.ui.login.submit=Entrar
 spring.security.ui.login.register=Registrarse
 spring.security.ui.login.forgot=Recordar Contraseña
+spring.security.ui.login.error=Introduce un usuario y/o contraseña valido.
 
 # Email de reseteo de la contraseña
 mail.passwordreset.subject=Recuperación de contraseña
