Correción del SecurityConfig y traducciones

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -218,7 +218,7 @@ spring.security.ui.login.password=Password
 spring.security.ui.login.submit=Sign In
 spring.security.ui.login.register=Register
 spring.security.ui.login.forgot=Forgot password
-
+spring.security.ui.login.error=Introduced user and/or password is not valid.
 # Email de reseteo de la contraseña
 mail.passwordreset.subject=Password reset
 mail.passwordreset.title=Reset your password
