--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -253,6 +253,7 @@ spring.security.ui.login.password=Contraseña
 spring.security.ui.login.submit=Entrar
 spring.security.ui.login.register=Registrarse
 spring.security.ui.login.forgot=Recordar Contraseña
+spring.security.ui.login.error=Usuario y/o contraseña introducidos incorrectos.
 
 # Email de reseteo de la contraseña
 mail.passwordreset.subject=Recuperación de contraseña
