AI Gemini implementation for bio generating

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -262,3 +262,4 @@ password.reset.back.login=Back to sign in
 password.reset.back.forgot=Request a new link
 
 spring.security.ui.login.logout-success=Logout succesfully done.
+msg.userProfile.action.generateBio=Generarte Bio with IA
