--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -296,3 +296,4 @@ password.reset.back.login=Volver a iniciar sesión
 password.reset.back.forgot=Solicitar un nuevo enlace
 
 spring.security.ui.login.logout-success=Ha cerrado sesión con éxito.
+msg.userProfile.action.generateBio=Generar Biografía con IA
